# nhi-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_api.py  run_api_uvx.sh
docs/: FRONTEND_SCHEMA.md
docs/architecture/: ARCHITECTURE_DIAGRAM.md  AWS_MIGRATION_PLAN.md  CODEBASE_OVERVIEW.md
docs/demos/: AMBIGUOUS_UI_DEMO.md  COMPLETE_SECURITY_DEMO.md  DUAL_UX_MODE.md  EXPANDED_QUERIES.md  PRESENTATION_SECURITY_GAPS.md
docs/guides/: IMPROVEMENTS.md  QUICK_FIX.md  START_API.md  TROUBLESHOOTING.md
docs/quickstarts/: QUICKSTART.md  QUICKSTART_AWS_ONLY.md  QUICKSTART_SIMPLE.md  QUICKSTART_UV.md  QUICKSTART_UVX.md
docs/reference/: SIMPLE_AUTH.md  VAULT_MCP_SETUP.md  security_audit.md
src/: __init__.py  api_server.py  identity_analyzer.py  identity_collector.py  main.py  mcp_client.py
ui/: README.md  index.html  tailwind.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AuditLog.tsx  Footer.tsx  Header.tsx  Hero.tsx  Integrations.tsx  ResultCard.tsx  ResultsTable.tsx  SearchBar.tsx  SecurityModeToggle.tsx  UserSelector.tsx
ui/src/components/ui/: button.tsx
ui/src/contexts/: AuthContext.tsx  SecurityContext.tsx
ui/src/integrations/supabase/: types.ts
ui/src/lib/: api.ts
ui/src/pages/: Auth.tsx  Dashboard.tsx  Index.tsx  Integrations.tsx  NotFound.tsx  Settings.tsx
ui/supabase/: config.toml
ui/supabase/migrations/: 20251103183650_ad66cf32-cf59-4d19-89a8-ee100d5c0ced.sql
